Semi fix z-index bug footer
semi fix z-index bug footer
changed color of footer

--- a/src/Assets/Styles/index.css
+++ b/src/Assets/Styles/index.css
@@ -119,7 +119,7 @@ a.dropdown-item:hover {
 
 /*   - Footer - */
 .footer-primary {
-  background-color: #161616;
+  background-color: #141414;
 }
 
 .footer-secondary {
@@ -1796,11 +1796,17 @@ span.login-remember-me-label-text {
 .cat-overview-container {
   background-color: #141414;
   overflow-x: hidden;
+  padding-bottom: 100px;
 }
 
 .movie-card {
   position: relative;
   margin: 0 2px;
+  border-radius: 5px;
+}
+
+.movie-card img {
+  border-radius: 5px;
 }
 
 .movie-card:hover {
