--- a/src/Assets/Styles/sass/layout/_footer.scss
+++ b/src/Assets/Styles/sass/layout/_footer.scss
@@ -1,14 +1,16 @@
 /*   - Footer - */
 .footer-primary {
-  background-color: #161616;
+  background-color: $background-color;
 }
 
 .footer-secondary {
   background-color: #0e0e0e; /*#161616*/
 }
+
 .footer-guest {
   background-color: rgba(0, 0, 0, 0.75);
 }
+
 .btn-link {
   color: #6d757d;
 }
